--- a/index.html
+++ b/index.html
@@ -24,8 +24,15 @@
             class="profile__avatar"
           />
           <div class="profile__column">
-            <h1 class="profile__name">Bessie Coleman</h1>
-            <p class="profile__description">Civil Aviator</p>
+            <h1 class="profile__name">
+              Aliaune Damala Bouga Time Bongo Puru Nacka Lu Lu Lu Badara Akon
+              blue
+            </h1>
+            <p class="profile__description">
+              civil aviatorKnown mononymously as Akon (/ˈeɪkɒn/), is a
+              Senegalese-American singer, record producer, and entrepreneur. An
+              influential figure in modern world...
+            </p>
             <button type="button" class="profile__edit-btn">
               <img src="./images/pencil.svg" alt="" />Edit Profile
             </button>
@@ -57,7 +64,9 @@
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title">Retaurant terrace</h2>
+                <h2 class="card__title">
+                  Retaurant terrace walkda adflkjasd erig sdkjgls
+                </h2>
                 <button type="button" class="card__like-btn">
                   <img src="./images/heart.svg" alt="heart icon" />
                 </button>
@@ -83,9 +92,7 @@
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title">
-                  A very long bridge, over the forest...
-                </h2>
+                <h2 class="card__title">A very long bridge, over the forest</h2>
                 <button type="button" class="card__like-btn">
                   <img src="./images/heart.svg" alt="heart icon" />
                 </button>
@@ -120,7 +127,7 @@
           </ul>
         </section>
       </main>
-      <footer class="footer">
+      <footer class="footer page__section">
         <p class="footer__copyright">2024 &copy; Spots</p>
       </footer>
     </div>
