upload video of project

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Celine Fredieu" />
-    <meta name="keywords" content="???" />
-    <meta name="description" content="???" />
+    <meta
+      name="keywords"
+      content="Spots, social media application, interactive profile"
+    />
+    <meta
+      name="description"
+      content="a social media application where you can add/remove/edit your profile"
+    />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <title>Spots</title>
