--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               influential figure in modern world...
             </p>
             <button type="button" class="profile__edit-btn">
-              <img src="./images/pencil.svg" alt="" />Edit Profile
+              <img src="./images/pencil.svg" alt="pencil icon" />Edit Profile
             </button>
           </div>
           <button type="button" class="profile__add-btn">
