Edit button stage3

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       </footer>
       <!-- modal is the semi transparent screen -->
       <!-- modal__container is the white box for the edit profile -->
-      <div class="modal modal_opened">
+      <div class="modal" id="edit-modal">
         <div class="modal__container">
           <button type="submit" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit profile</h2>
@@ -164,7 +164,6 @@
             <button type="submit" class="modal__submit-btn">Save</button>
           </form>
         </div>
-        ?
       </div>
     </div>
     <script defer src="./scripts/index.js"></script>
