Update Project5 Preview Modal

--- a/index.html
+++ b/index.html
@@ -45,12 +45,13 @@
           <ul class="cards__list">
             <template id="card-template">
               <li class="card">
-                <img src="" alt="" class="card__image" />
+                <div class="card__image-container">
+                  <img src="" alt="" class="card__image" />
+                  <button type="button" class="card__trash-btn"></button>
+                </div>
                 <div class="card__content">
                   <h2 class="card__title"></h2>
-                  <button type="button" class="card__like-btn">
-                    <img src="./images/heart.svg" alt="heart icon" />
-                  </button>
+                  <button type="button" class="card__like-btn"></button>
                 </div>
               </li>
             </template>
@@ -60,36 +61,79 @@
       <footer class="footer page__section">
         <p class="footer__copyright">2024 &copy; Spots</p>
       </footer>
-      <!-- modal is the semi transparent screen -->
-      <!-- modal__container is the white box for the edit profile -->
-      <div class="modal" id="edit-modal">
-        <div class="modal__container">
-          <button type="submit" class="modal__close-btn"></button>
-          <h2 class="modal__title">Edit profile</h2>
-          <form name="edit-profile" class="modal__form">
-            <label for="profile-name-input" class="modal__label">
-              Name
-              <input
-                id="profile-name-input"
-                type="text"
-                class="modal__input"
-                placeholder="Type your name"
-              />
-            </label>
-            <label for="profile-description-input" class="modal__label">
-              Description
-              <input
-                id="profile-description-input"
-                type="text"
-                class="modal__input"
-                placeholder="Describe yourself"
-              />
-            </label>
-            <button type="submit" class="modal__submit-btn">Save</button>
-          </form>
-        </div>
+    </div>
+    <!-- modal is the semi transparent screen -->
+    <!-- modal__container is the white box for the edit profile -->
+    <div class="modal" id="edit-modal">
+      <div class="modal__container">
+        <button type="submit" class="modal__close-btn"></button>
+        <h2 class="modal__title">Edit profile</h2>
+        <form name="edit-profile" class="modal__form">
+          <label for="profile-name-input" class="modal__label">
+            Name
+            <input
+              id="profile-name-input"
+              type="text"
+              class="modal__input"
+              placeholder="Type your name"
+            />
+          </label>
+          <label for="profile-description-input" class="modal__label">
+            Description
+            <input
+              id="profile-description-input"
+              type="text"
+              class="modal__input"
+              placeholder="Describe yourself"
+            />
+          </label>
+          <button type="submit" class="modal__submit-btn">Save</button>
+        </form>
       </div>
     </div>
+
+    <div class="modal" id="add-card-modal">
+      <div class="modal__container">
+        <button type="submit" class="modal__close-btn"></button>
+        <h2 class="modal__title">New Post</h2>
+        <form name="New Post" class="modal__form">
+          <label for="add-card-link-input" class="modal__label">
+            Image link
+            <input
+              id="add-card-link-input"
+              type="url"
+              class="modal__input"
+              name="link"
+              placeholder="Paste a link to the picture"
+            />
+          </label>
+          <label for="add-card-caption-input" class="modal__label">
+            Caption
+            <input
+              id="add-card-caption-input"
+              type="text"
+              class="modal__input"
+              name="caption"
+              placeholder="Type your caption"
+            />
+          </label>
+          <button type="submit" class="modal__submit-btn">Save</button>
+        </form>
+      </div>
+    </div>
+
+    <div class="modal" id="preview-modal">
+      <div class="modal__container modal__container-type-preview">
+        <button
+          type="button"
+          aria-label="Close modal"
+          class="modal__close-btn modal__close-btn-type-preview"
+        ></button>
+        <img class="modal__image" src="" alt="" />
+        <p class="modal__caption"></p>
+      </div>
+    </div>
+
     <script defer src="./scripts/index.js"></script>
   </body>
 </html>
