Correct first submission errors

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!-- modal__container is the white box for the edit profile -->
     <div class="modal" id="edit-modal">
       <div class="modal__container">
-        <button type="submit" class="modal__close-btn"></button>
+        <button type="button" class="modal__close-btn"></button>
         <h2 class="modal__title">Edit profile</h2>
         <form name="edit-profile" class="modal__form">
           <label for="profile-name-input" class="modal__label">
@@ -94,7 +94,7 @@
 
     <div class="modal" id="add-card-modal">
       <div class="modal__container">
-        <button type="submit" class="modal__close-btn"></button>
+        <button type="button" class="modal__close-btn"></button>
         <h2 class="modal__title">New Post</h2>
         <form name="New Post" class="modal__form">
           <label for="add-card-link-input" class="modal__label">
@@ -123,11 +123,11 @@
     </div>
 
     <div class="modal" id="preview-modal">
-      <div class="modal__container modal__container-type-preview">
+      <div class="modal__container modal__container_type_preview">
         <button
           type="button"
           aria-label="Close modal"
-          class="modal__close-btn modal__close-btn-type-preview"
+          class="modal__close-btn modal__close-btn_type_preview"
         ></button>
         <img class="modal__image" src="" alt="" />
         <p class="modal__caption"></p>
