--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       </div>
     </div>
 
-    <div class="modal" id="preview-modal">
+    <div class="modal modal_type_preview" id="preview-modal">
       <div class="modal__container modal__container_type_preview">
         <button
           type="button"
